// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders Form correctly 1`] = `
<div
  className="form-component container"
  style={
    Object {
      "width": "50px",
    }
  }
>
  <form
    className="form form myClass"
    name="nodejs"
  />
</div>
`;

exports[`Form renders Form with FormGroup correctly 1`] = `
<Form
  className="myClass"
  dataLabel="SomeForm"
  onSubmit={[Function]}
  style={
    Object {
      "width": "50px",
    }
  }
>
  <div
    className="form-component container"
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <form
      className="form form myClass"
      name="nodejs"
    >
      <FormGroup
        className="myClass"
        horizontal={true}
        key="0"
        style={
          Object {
            "width": "50px",
          }
        }
      >
        <div
          className="formgroup-component container horizontal myClass"
          style={
            Object {
              "width": "50px",
            }
          }
        />
      </FormGroup>
    </form>
  </div>
</Form>
`;

exports[`Form renders FormGroup correctly 1`] = `
<div
  className="formgroup-component container horizontal myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;
